--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "eslint-config-pebblecode": "file:../../pebblecode-styleguide/packages/eslint-config-pebblecode",
     "map-obj": "^1.0.0"
   },
   "devDependencies": {
@@ -37,7 +38,7 @@
     "babel-eslint": "^4.1.5",
     "chai": "^2.1.1",
     "eslint": "^1.9.0",
-    "eslint-config-airbnb": "^1.0.0",
+    "eslint-config-pebblecode": "^1.0.0",
     "eslint-plugin-react": "^3.8.0",
     "istanbul": "^0.4.0",
     "mocha": "^2.2.1",
